--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/sobipro.css
@@ -9,10 +9,12 @@
 
  * @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
  * @license GNU/GPL Version 3
- * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3 as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
+ * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
+ * as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
  * See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
 
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 
  * $Date$
  * $Revision$
@@ -268,11 +270,15 @@ fieldset label {
   margin-left: 20px;
   width: 180px;
 }
-#SPAdminForm fieldset.form-horizontal div.spEditImage label {
+.spEditImage label {
   margin: 5px;
   float: none;
   display: inline;
   color: #808080;
+}
+.spEditImage img {
+  border: 1px solid #909090;
+  border-radius: 5px 5px 5px 5px;
 }
 #SPAdminForm fieldset.form-horizontal label {
   clear: none;
@@ -753,8 +759,10 @@ input.sp-input-micro[type="text"] {
   margin-right: 5px !important;
   float: left;
 }
-.SobiPro table.mceLayout {
-  border-radius: 3px;
+.spFileUpload .alert {
+  padding-top: 5px;
+  padding-bottom: 5px;
+  margin-bottom: 0;
 }
 .SigsiuTree .selected {
   float: left;
@@ -788,6 +796,9 @@ input.sp-input-micro[type="text"] {
   z-index: 1040;
 }
 /* Compatibility Styles */
+.SobiPro table.mceLayout {
+  border-radius: 3px;
+}
 /* Editor in J!3.0 */
 .toggle-editor {
   float: none !important;
