--- a/Component/branches/SobiPro-1.1/Site/media/css/icons.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/icons.css
@@ -50,8 +50,8 @@
 }
 @font-face {
   font-family: 'FontAwesome';
-  src: url('../../css/fonts/fontawesome-webfont.eot?v=3.0.1');
-  src: url('../../css/fonts/fontawesome-webfont.eot?#iefix&v=3.0.1') format('embedded-opentype'), url('../../css/fonts/fontawesome-webfont.woff?v=3.0.1') format('woff'), url('../../css/fonts/fontawesome-webfont.ttf?v=3.0.1') format('truetype');
+  src: url('fonts/fontawesome-webfont.eot');
+  src: url('fonts/fontawesome-webfont.eot') format('embedded-opentype'), url('fonts/fontawesome-webfont.woff') format('woff'), url('fonts/fontawesome-webfont.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
