--- a/Component/branches/SobiPro-1.1/Site/media/less/icons.org.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/icons.org.less
@@ -21,7 +21,7 @@
  *  Work: Lead Product Designer @ http://kyruus.com
  */
 
-@FontAwesomePath: "../../css/fonts";
+@FontAwesomePath: "../css/fonts";
 @borderColor:       #eee;
 @iconMuted:         #eee;
 .border-radius(@radius) { -webkit-border-radius: @radius; -moz-border-radius: @radius; border-radius: @radius; }
