--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -294,8 +294,10 @@ div.spScreenTitle h4 {
   color: #ffffff !important;
 }
 
-.SobiPro .modal {
+.SobiPro div.modal {
   width: 520px;
+  margin: -250px 0 0 -280px;
+  top: 50%;
 }
 
 #SPAdminForm table .control-label {
