--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/tree.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/tree.css
@@ -1,22 +1,29 @@
 /**
  * @version: $Id$
- * @package: SobiPro Library
- * ===================================================
+ * @package: SobiPro Component for Joomla!
+
  * @author
  * Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
  * Email: sobi[at]sigsiu.net
  * Url: http://www.Sigsiu.NET
- * ===================================================
- * @copyright Copyright (C) 2006 - 2011 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
- * @license see http://www.gnu.org/licenses/lgpl.html GNU/LGPL Version 3.
- * You can use, redistribute this file and/or modify it under the terms of the GNU Lesser General Public License version 3
- * ===================================================
+
+ * @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+ * @license GNU/GPL Version 3
+ * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
+ * as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
+ * See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
+
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
+
  * $Date$
  * $Revision$
  * $Author$
  * $HeadURL$
- */ /* Styles for SigsiuTree */
-	/* -------------------------------------------------------- */
+ */
+
+/* Styles for SigsiuTree */
+/* --------------------- */
 .sigsiuTree {
 	font-size: 13px;
 	color: #666;
