Tree on Frontend

--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/tree.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/tree.css
@@ -22,8 +22,8 @@
  * $HeadURL$
  */
 
-/* Styles for SigsiuTree */
-/* --------------------- */
+/* Styles for SigsiuTree on Backend */
+/* -------------------------------- */
 .sigsiuTree {
 	font-size: 13px;
 	color: #666;
