--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -55,6 +55,8 @@ body.contentpane {
   padding: 0 0 0 20px;
   margin: 10px 10px 0 0;
   background-color: @background;
+  height: 95%;
+  height: 95%;
 }
 body.contentpane a {
   color: @font-a;
@@ -73,8 +75,11 @@ body.contentpane a {
 }
 .SobiPro .modal-body {
   max-height: 420px;
+}
+#spIco .modal-body {
   padding: 0;
 }
+
 .SobiPro iframe {
   width: 520px;
   min-height: 300px;
