--- a/Component/branches/SobiPro-1.1/Admin/template/edit.xml
+++ b/Component/branches/SobiPro-1.1/Admin/template/edit.xml
@@ -31,6 +31,8 @@
 			<button type="duplicate" task="template.saveAs" />
 		</button>
 		<divider />
+        <buttons icon="sitemap" buttons="sections-list" label="TB.SECTIONS" />
+        <divider />
 		<buttons type="options" dropdown-class="pull-right">
 			<button type="url" task="panel" />
 			<button type="url" task="config" />
@@ -38,8 +40,6 @@
 			<button type="url" task="extensions" />
 			<button type="help" target="_blank" />
 		</buttons>
-        <divider />
-        <buttons icon="share" buttons="sections-list" label="TB.SECTIONS" />
 	</toolbar>
 	<body>
 		<div class="row-fluid">
