--- a/Component/branches/SobiPro-1.1/Admin/template/info.xml
+++ b/Component/branches/SobiPro-1.1/Admin/template/info.xml
@@ -32,6 +32,8 @@
 		<divider />
 		<button type="delete" task="template.delete" />
 		<divider />
+        <buttons icon="sitemap" buttons="sections-list" label="TB.SECTIONS" />
+        <divider />
 		<buttons type="options" dropdown-class="pull-right">
 			<button type="url" task="panel" />
 			<button type="url" task="config" />
@@ -40,8 +42,6 @@
 			<button type="url" task="template.info" />
 			<button type="help" target="_blank" />
 		</buttons>
-        <divider />
-        <buttons icon="share" buttons="sections-list" label="TB.SECTIONS" />
 	</toolbar>
 	<body>
 		<div class="row-fluid">
