--- a/Component/branches/SobiPro-1.1/Site/media/css/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/sobipro.css
@@ -47,6 +47,9 @@
   margin-bottom: 15px;
   margin-top: 5px;
 }
+.SobiPro .btn .caret {
+  margin-bottom: 9px;
+}
 .SobiPro div#sobiProFooter,
 .SobiPro div#sobiProFooter a {
   color: #999999;
@@ -55,7 +58,6 @@
   text-decoration: none;
 }
 .SobiPro #alpha-index .pagination {
-  margin-bottom: 0px;
   margin-top: 5px;
 }
 .SobiPro .alphalist {
