--- a/Component/branches/SobiPro-1.1/Site/media/less/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/sobipro.less
@@ -54,6 +54,10 @@
   margin-top: 5px;
 }
 
+.SobiPro .btn .caret {
+  margin-bottom: 9px;
+}
+
 .SobiPro div#sobiProFooter,
 .SobiPro div#sobiProFooter a {
   color: #999999;
@@ -61,12 +65,9 @@
   padding-top: 10px;
   text-decoration: none;
 }
-
 .SobiPro #alpha-index .pagination {
-  margin-bottom: 0px;
   margin-top: 5px;
 }
-
 .SobiPro .alphalist {
   text-align: right;
 }
