--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default/css/search.css
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default/css/search.css
@@ -1,9 +1,32 @@
-.SobiPro .spFieldCheckbox label {
+/**
+ * @version: $Id$
+ * @package: SobiPro Component for Joomla!
+
+ * @author
+ * Name: Sigrid Suski & Radek Suski, Sigsiu.NET GmbH
+ * Email: sobi[at]sigsiu.net
+ * Url: http://www.Sigsiu.NET
+
+ * @copyright Copyright (C) 2006 - 2013 Sigsiu.NET GmbH (http://www.sigsiu.net). All rights reserved.
+ * @license GNU/GPL Version 3
+ * This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License version 3
+ * as published by the Free Software Foundation, and under the additional terms according section 7 of GPL v3.
+ * See http://www.gnu.org/licenses/gpl.html and http://sobipro.sigsiu.net/licenses.
+
+ * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
+
+ * $Date$
+ * $Revision$
+ * $Author$
+ * $HeadURL$
+ */
+.spFieldCheckbox label {
   color: #666666;
   float: left;
   margin-top: 5px;
 }
-.SobiPro .spFieldCheckbox input {
+.spFieldCheckbox input {
   margin-top: 6px !important;
   margin-left: 5px !important;
   margin-right: 5px !important;
