Default Template/4 (#) Missing id for inbox fields in search form Installationsfiles for country und businessdays korrigiert

--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default/css/default.css
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default/css/default.css
@@ -21,16 +21,17 @@
  * $Author$
  * $HeadURL$
  */
-/* to override dominant Joomla template styles (e.g. Beez) for SobiPro in Joomla 2.5
-  can be removed if a template is used that does not interfere in SobiPro styling using CSS id */
+/* Joomla! 2.5 template compatibility
+   to override dominant Joomla template styles (in e.g. Beez) for SobiPro in Joomla 2.5
+   can be removed if a template is used that does not interfere in SobiPro styling using CSS id or in Joomla 3.0 */
 #SobiPro ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
 }
-#SobiPro a:hover,
-#SobiPro a:active,
-#SobiPro a:focus {
+#SobiPro .topmenu a:hover,
+#SobiPro .topmenu a:active,
+#SobiPro .topmenu a:focus {
   background: inherit;
   color: inherit;
 }
@@ -39,17 +40,24 @@
   margin: inherit;
 }
 #SobiPro .pagination {
-  border: none;
-  padding: 0;
-  margin-bottom: 20px;
+    border: none;
+    padding: 0;
+    margin-bottom: 20px;
 }
+#SobiPro .btn.dropdown-toggle {
+    background-color: #E6E6E6;
+}
+/* end Joomla! 2.5 template compatibility */
+
+/* General Styling */
 .SPDetailEntry h1 {
   font-size: 28px;
 }
 .SPDetailEntry {
   padding: 10px;
 }
-/* Individual styling, please adapt if you change field names */
+
+/* Individual Styling, please adapt if you change field names */
 .field_country,
 .field_fax,
 .field_website,
