--- a/Component/branches/SobiPro-1.1/Site/media/css/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/sobipro.css
@@ -66,3 +66,8 @@
 .SobiPro .alphalist .dropdown-menu {
   text-align: left;
 }
+.SPSearchSelectRangeTo,
+.SPSearchSelectRangeFrom {
+  padding-bottom: 3px;
+  padding-top: 3px;
+}
