--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -357,6 +357,10 @@ fieldset label {
   margin-left: 220px;
 }
 
+#SPAdminForm fieldset img {
+  float: left;
+}
+
 .SPAdmNavBar .control-group {
   float: left;
   padding-left: 12px;
@@ -889,12 +893,15 @@ input.sp-input-micro[type="text"] {
   margin-left: 20px;
 }
 
-.spFieldUrlLabel {
+.spFieldUrlLabel,
+.spFieldEmailLabel {
   display: block;
   height: 40px;
 }
 
-.spFieldUrlLabel label {
+.spFieldUrlLabel label,
+.spFieldEmailLabel label,
+.spFieldEmail label {
   padding-right: 5px;
   color: #666666;
   margin-top: 5px;
