--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default/css/default.less
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default/css/default.less
@@ -29,9 +29,9 @@
   margin: 0;
   padding: 0;
 }
-#SobiPro a:hover,
-#SobiPro a:active,
-#SobiPro a:focus {
+#SobiPro .topmenu a:hover,
+#SobiPro .topmenu a:active,
+#SobiPro .topmenu a:focus {
   background: inherit;
   color: inherit;
 }
@@ -44,8 +44,12 @@
   padding: 0;
   margin-bottom: 20px;
 }
+#SobiPro .btn.dropdown-toggle {
+  background-color: #E6E6E6;
+}
+/* end Joomla! 2.5 template compatibility */
 
-
+/* General Styling */
 .SPDetailEntry h1 {
   font-size: 28px;
 }
@@ -53,7 +57,7 @@
   padding: 10px;
 }
 
-/* Individual styling, please adapt if you change field names */
+/* Individual Styling, please adapt if you change field names */
 .field_country,
 .field_fax,
 .field_website,
