--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default/css/search.less
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default/css/search.less
@@ -28,8 +28,44 @@
   margin-top: 5px;
 }
 .spFieldCheckbox input {
-  margin-top: 6px !important;
+  margin-top: 9px !important;
   margin-left: 5px !important;
   margin-right: 5px !important;
   float: left;
+}
+
+.spFieldUrlLabel {
+  display: block;
+  height: 40px;
+}
+.spFieldUrlLabel label {
+  padding-right: 5px;
+  color: #666666;
+  margin-top: 5px;
+  float: left;
+}
+.spFieldUrl {
+  display: block;
+}
+.spFieldUrl select {
+  width: 100px;
+}
+.spFileUpload input,
+.spFieldRadio,
+.spFieldCheckbox {
+  float: left;
+}
+.spFieldRadio label {
+  color: #666666;
+  float: left;
+  margin-top: 5px;
+}
+.spFieldRadio input {
+  margin-top: 8px !important;
+  margin-left: 5px !important;
+  margin-right: 5px !important;
+  float: left;
+}
+.SobiPro table.mceLayout {
+  border-radius: 3px;
 }
