--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -193,6 +193,12 @@ input[type='radio']{
   text-align: center;
   vertical-align: middle;
 }
+.SobiPro .table th.SpCellCenterSmall,
+.SobiPro .table td.SpCellCenterSmall {
+  text-align: center;
+  vertical-align: middle;
+  max-width: 50px;
+}
 
 .SobiPro .table th.SpCellArrowCol,
 .SobiPro .table td.SpCellArrowCol,
