--- a/Component/branches/SobiPro-1.1/Site/media/less/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/sobipro.less
@@ -27,6 +27,12 @@
   clear: both;
 }
 
+.SobiPro div.modal {
+  width: 520px;
+  margin: -250px 0 0 -280px;
+  top: 50%;
+}
+
 .SobiPro .popover-inner .spclose {
   padding-right: 8px;
   padding-top: 5px;
