--- a/Component/branches/SobiPro-1.1/Site/media/less/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/sobipro.less
@@ -38,10 +38,10 @@
   padding-top: 5px;
   font-size: 15px;
 }
+
 .SobiPro .thumbnail {
   margin-bottom: 9px;
 }
-
 .SobiPro div.thumbcat {
   border: none;
   box-shadow: 0 0 0 0;
@@ -49,7 +49,6 @@
   line-height: 20px;
   padding: 4px;
 }
-
 .SobiPro p.thumbcat {
   margin: 0;
 }
@@ -62,6 +61,10 @@
 
 .SobiPro .btn .caret {
   margin-bottom: 9px;
+}
+
+.SobiPro .SPEntryEdit .required {
+  border-color: #7ac6ff;
 }
 
 .SobiPro div#sobiProFooter,
@@ -79,6 +82,17 @@
 }
 .SobiPro .alphalist .dropdown-menu {
   text-align: left;
+}
+
+.SobiPro table.payment td {
+  line-height: 10px;
+}
+.SobiPro table tr.summary td {
+  background-color: #ffffff;
+  padding-top: 25px;
+}
+.SobiPro table tr.sum td {
+  font-weight: bold;
 }
 
 .SPSearchSelectRangeTo,
