--- a/Component/branches/SobiPro-1.1/Site/media/css/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/sobipro.css
@@ -58,6 +58,10 @@
 .SobiPro .SPEntryEdit .required {
   border-color: #7ac6ff;
 }
+.Sobipro .SPDetailEntry .pull-left {
+  margin-right: 10px;
+  margin-top: 17px;
+}
 .SobiPro div#sobiProFooter,
 .SobiPro div#sobiProFooter a {
   color: #999999;
