--- a/Component/branches/SobiPro-1.1/Site/media/css/sobipro.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/sobipro.css
@@ -21,9 +21,6 @@
  * $Author$
  * $HeadURL$
  */
-.SobiPro .clearall {
-  clear: both;
-}
 .SobiPro div.modal {
   width: 520px;
   margin: -250px 0 0 -280px;
@@ -58,7 +55,7 @@
 .SobiPro .SPEntryEdit .required {
   border-color: #7ac6ff;
 }
-.Sobipro .SPDetailEntry .pull-left {
+.SobiPro .SPDetailEntry .pull-left {
   margin-right: 10px;
   margin-top: 17px;
 }
