--- a/Component/branches/SobiPro-1.1/Site/media/less/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/sobipro.less
@@ -23,10 +23,6 @@
  */
 
 
-.SobiPro .clearall {
-  clear: both;
-}
-
 .SobiPro div.modal {
   width: 520px;
   margin: -250px 0 0 -280px;
@@ -66,7 +62,7 @@
 .SobiPro .SPEntryEdit .required {
   border-color: #7ac6ff;
 }
-.Sobipro .SPDetailEntry .pull-left {
+.SobiPro .SPDetailEntry .pull-left {
   margin-right: 10px;
   margin-top: 17px;
 }
