--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/default.less
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/default.less
@@ -47,10 +47,21 @@
 #SobiPro .btn.dropdown-toggle {
   background-color: #E6E6E6;
 }
+#SobiPro h1 {
+  border-bottom: none;
+  color: inherit;
+  font-family: inherit;
+  font-size: 28px;
+  font-weight: inherit;
+  line-height: 40px;
+  margin: inherit;
+  padding: inherit;
+}
 #SobiPro h3 {
   margin: inherit;
 }
 /* end Joomla! 2.5 template compatibility */
+
 
 /* General Styling */
 .SPDetailEntry h1 {
