--- a/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/default.css
+++ b/Component/branches/SobiPro-1.1/Site/usr/templates/default2/css/default.css
@@ -21,6 +21,7 @@
  * $Author$
  * $HeadURL$
  */
+
 /* to override dominant Joomla template styles (e.g. Beez) for SobiPro in Joomla 2.5
   can be removed if a template is used that does not interfere in SobiPro styling using CSS id */
 #SobiPro ul {
@@ -46,10 +47,22 @@
 #SobiPro .btn.dropdown-toggle {
   background-color: #E6E6E6;
 }
+#SobiPro h1 {
+    border-bottom: none;
+    color: inherit;
+    font-family: inherit;
+    font-size: 28px;
+    font-weight: inherit;
+    line-height: 40px;
+    margin: inherit;
+    padding: inherit;
+}
 #SobiPro h3 {
     margin: inherit;
 }
 /* end Joomla! 2.5 template compatibility */
+
+
 /* General Styling */
 .SPDetailEntry h1 {
   font-size: 28px;
