Pathway für neue Einträge (DV) enthält eine 0 wenn über Alpha-Menü selektiert: Home/My Directory/0/Vieles link = http://sigsiu-server/trinity/30/my-directory?sid=0:0; ebenso pathway von payment screen

--- a/Component/branches/SobiPro-1.1/Site/media/css/adm/legacy.css
+++ b/Component/branches/SobiPro-1.1/Site/media/css/adm/legacy.css
@@ -23,9 +23,9 @@
  */
 
 
-#toolbar-box {
-	display: block;
-}
+/*#toolbar-box {*/
+	/*display: block;*/
+/*}*/
 
 div.SPFListAlias {
 	font-size: 0.9em !important;
