--- a/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
+++ b/Component/branches/SobiPro-1.1/Site/media/less/adm/sobipro.less
@@ -868,6 +868,9 @@ input.sp-input-micro[type="text"] {
 .spicon-48-SobiApplicationSection {
   background-image: url('@{admIcons}/folder-application-section.png');
 }
+.spicon-48-SobiApplication {
+  background-image: url('@{admIcons}/folder-application.png');
+}
 
 .spicon-48-SobiTemplate {
   background-image: url('@{admIcons}/folder-templates.png');
